--- a/viikko4/Verkkokauppa/build.gradle
+++ b/viikko4/Verkkokauppa/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'java'
 
 apply plugin: 'application'
 
+apply plugin: "jacoco" 
+
 repositories {
     jcenter()
 }
@@ -22,3 +24,4 @@ mainClassName = 'ohtu.Main'
 run {
     standardInput = System.in
 }
+
